discussion/kv_engine/156930/156930_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: add enable wal to kv config

follow:
http://review.couchbase.org/c/kv_engine/+/144097

Change-Id: I368380e5b7e4f27261e0df1402fc825c77751210

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-07-05 05:21:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-05 05:37:20.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10373/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29: error: no member named "isMagmaEnableWAL" in "Configuration"; did you mean "isMagmaEnableWal"? [clang-diagnostic-error]
    magmaEnableWAL = config.isMagmaEnableWAL();
                            ^~~~~~~~~~~~~~~~
                            isMagmaEnableWal
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/generated_configuration.h:203:10: note: "isMagmaEnableWal" declared here
    bool isMagmaEnableWal() const;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10373/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29:
error: no member named "isMagmaEnableWAL" in "Configuration"; did you mean "isMagmaEnableWal"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10373/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37484/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc(77): error C2039: "isMagmaEnableWAL": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37484/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31973/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29:
error: no member named "isMagmaEnableWAL" in "Configuration"; did you mean "isMagmaEnableWal"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31973/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11943/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0145/0157]: test_MB-19687_fixed...Unexpected stat: ep_magma_enable_wal from stat group 
[2021-07-05T05:27:14.927Z] Unexpected stat: ep_magma_enable_wal from stat group config
[2021-07-05T05:27:14.927Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7756 Test failed: `stats error" (missing stats)
[2021-07-05T05:27:14.927Z] (27 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11943/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12440/ : FAILURE

Compile error at [2021-07-05T05:22:52.415Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29:
error: no member named "isMagmaEnableWAL" in "Configuration"; did you mean "isMagmaEnableWal"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12100/ : FAILURE

Compile error at [2021-07-05T05:24:05.937Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29:
error: ?class Configuration? has no member named ?isMagmaEnableWAL?; did you mean ?isMagmaEnableWal??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12100/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11026/ : FAILURE

Compile error at [2021-07-05T05:24:08.980Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29:
error: no member named "isMagmaEnableWAL" in "Configuration"; did you mean "isMagmaEnableWal"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19991/ : FAILURE

Compile error at [2021-07-05T05:23:51.493Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:77:29:
error: no member named "isMagmaEnableWAL" in "Configuration"; did you mean "isMagmaEnableWal"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19991/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8999/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
